<resources>
    <string name="app_name">Ministry Report</string>
    <string-array name="theme_colors">
        <item>Purple</item><item>Blue</item><item>Green</item>
        <item>Red</item><item>Orange</item>
    </string-array>
    <string-array name="theme_entries">
        <item>0</item><item>1</item><item>2</item>
        <item>3</item><item>4</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="ui">Personalization</string>
    <string name="theme">Themes</string>
    <string name="pioneer_set">Pioneer Settings</string>
    <string name="pioneer_title">Count Pioneer Credit Hours</string>
    <string name="pioneer_hint">credited time for pioneers</string>
    <string name="pioneer_sum">Includes time on LDC projects and Pioneer School</string>
    <string name="title_section1">Daily Report</string>
    <string name="title_section2">Monthly Report</string>
    <string name="title_section3">Yearly Report</string>
    <string name="add_report">Add Report</string>
    <string name="edit_report">Edit Report</string>
    <string name="send_email">Email Report</string>
    <string name="sms_report">SMS Report</string>
    <string name="month_report">Month to Report</string>
    <string name="send">Send</string>
    <string name="nothing">0</string>
    <string name="hour">Hours</string>
    <string name="hours">Hours (hh.mm)</string>
    <string name="magazine">Magazines</string>
    <string name="brch">Brochures</string>
    <string name="book">Books</string>
    <string name="tract">Tracts and Articles</string>
    <string name="rv">Return Visits</string>
    <string name="s">Bible Studies</string>
    <string name="description">Comment</string>
    <string name="pc">Credit Hours</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="set">Set</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_report_dialog">Delete Report?</string>
    <string name="report_delete">Report Deleted</string>
    <string name="no_report">Nothing To Report</string>
    <string name="okay">OK</string>
    <string name="ad_unit_id">ca-app-pub-6509134419013533/5182522009</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="h">hours</string>
    <string name="m">magazines</string>
    <string name="br">brochures</string>
    <string name="bo">books</string>
    <string name="t">tracts and articles</string>
    <string name="r_v">return visits</string>
    <string name="b_s">Bible studies</string>
    <string name="p_c">hours of pioneer credits</string>
    <string name="p_c_h_m">hours.minutes of pioneer credits</string>
    <string name="report_for">Report for</string>
    <string name="no_checks">None of the Boxes Selected</string>
    <string name="no_email">No Report Stored for this Month</string>
    <string name="no_email_app">No Email Application Found</string>
    <string name="no_sms_app">No SMS Application Found</string>
    <string name="placements">Placements</string>
    <string name="place">placements</string>
    <string name="vs">Videos</string>
    <string name="video">Video showings</string>
    <string name="v_s">video showings</string>
</resources>
