<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/add_report" android:title="@string/add_report"
        android:icon="@drawable/ic_action_new" app:showAsAction="ifRoom" />
    <item android:id="@+id/send_email" android:title="@string/send_email"
        android:icon="@drawable/ic_action_email" app:showAsAction="ifRoom"/>
    <item android:id="@+id/send_sms" android:title="@string/sms_report"
        android:icon="@drawable/ic_action_send_now" app:showAsAction="ifRoom"/>
    <item android:id="@+id/theme_config" android:title="Settings"
        android:icon="@drawable/ic_action_settings" app:showAsAction="ifRoom"/>
</menu>