<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="10dp" android:paddingStart="10dp"
    android:paddingRight="10dp" android:paddingEnd="10dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/add_report_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
                android:text="@string/add_report"
                android:textSize="30sp"/>
            <ScrollView
                android:id="@+id/ed_div"
                android:layout_below="@+id/add_report_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <DatePicker
                            android:id="@+id/date_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:calendarViewShown="false"
                            android:datePickerMode="spinner"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hours"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/magazine"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/mags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brch"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/broch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/books"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tract"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/tracts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rv"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/rvs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/studies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences|textAutoCorrect"/>
                    <TextView android:id="@+id/pca_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pc"
                        android:textSize="12sp"/>
                    <EditText android:id="@+id/pca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="credited time for pioneers"
                        android:inputType="numberDecimal"/>
                </LinearLayout>
            </ScrollView>
            <RelativeLayout
                android:id="@+id/button_div"
                android:layout_below="@+id/ed_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/save" android:layout_toStartOf="@+id/save"
                    android:background="@android:color/transparent"
                    android:text="@string/cancel"
                    android:onClick="cancel"/>
                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:text="@string/add"
                    android:onClick="save"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>