<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <Button
        android:id="@+id/prevmonth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:layout_toStartOf="@+id/month"
        android:layout_toLeftOf="@+id/month"
        android:drawableLeft="@drawable/ic_action_previous_item"/>
    <TextView
        android:id="@+id/month"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        />
    <Button
        android:id="@+id/monthafter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:layout_toEndOf="@+id/month"
        android:layout_toRightOf="@+id/month"
        android:drawableRight="@drawable/ic_action_next_item"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/month">
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout android:id="@+id/hour_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/hour_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hours" android:textSize="30sp"/>
            <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/hour" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="35sp"/>
        </RelativeLayout>
        <View style="@style/Divider"/>
        <RelativeLayout android:paddingTop="10dp" android:id="@+id/placements_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/placements_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/placements" android:textSize="30sp"/>
            <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/place_m" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="35sp"/>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout android:paddingTop="5dp" android:id="@+id/mag_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/mag_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/magazine" android:textSize="20sp"/>
                <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/mag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="25sp"/>
            </RelativeLayout>
            <RelativeLayout android:paddingTop="5dp" android:id="@+id/brch_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/brch_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brch" android:textSize="20sp"/>
                <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/brch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="25sp"/>
            </RelativeLayout>
            <RelativeLayout android:paddingTop="5dp" android:id="@+id/book_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/book_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/book" android:textSize="20sp"/>
                <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/book" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="25sp"/>
            </RelativeLayout>
            <RelativeLayout android:paddingTop="5dp" android:id="@+id/t_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/t_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tract" android:textSize="20sp"/>
                <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/t" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="25sp"/>
            </RelativeLayout>
        </LinearLayout>
        <View style="@style/Divider"/>
        <RelativeLayout android:paddingTop="10dp" android:id="@+id/vs_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/vs_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vs" android:textSize="30sp"/>
            <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/vs" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="35sp"/>
        </RelativeLayout>
        <View style="@style/Divider"/>
        <RelativeLayout android:paddingTop="10dp" android:id="@+id/rv_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/rv_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rv" android:textSize="30sp"/>
            <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/rv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="35sp"/>
        </RelativeLayout>
        <View style="@style/Divider"/>
        <RelativeLayout android:paddingTop="10dp" android:id="@+id/s_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/s_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/s" android:textSize="30sp"/>
            <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/s" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="35sp"/>
        </RelativeLayout>
        <View style="@style/Divider"/>
        <RelativeLayout android:paddingTop="10dp" android:id="@+id/pcm_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
            <TextView android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:id="@+id/pc_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc" android:textSize="30sp"/>
            <TextView android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:layout_marginRight="20dp" android:layout_marginEnd="20dp" android:id="@+id/pc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nothing" android:textSize="35sp"/>
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
